k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-load-test-service
  namespace: my-load-test-app
spec:
  selector:
    app: my-load-test-app
  type: LoadBalancer
  sessionAffinity: ClientIP  # Mantiene las solicitudes de un cliente en la misma réplica
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
